# PolicyMind-AI-RAG-Powered-Document-Intelligence-Platform

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.ps1  upload_ui_check.txt  upload_ui_tail.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_question.md
.github/workflows/: ci.yml
app/: streamlit_app.py
app/components/: chat_ui.py  source_display.py  ui_helpers.py  upload_ui.py
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: graph.py  health.py  ingest.py  query.py  root.py
backend/app/core/: citation_engine.py  connectors.py  document_loader.py  embeddings.py  entity_extraction.py  retriever.py  text_chunker.py
backend/app/schemas/: __init__.py  document.py  query.py  response.py
backend/app/services/: graph_service.py  llm_service.py  rag_pipeline.py  vector_store.py
backend/app/utils/: helpers.py  logging.py
backend/tests/: conftest.py  test_api.py  test_citation_engine.py  test_connectors.py  test_document_loader.py  test_evaluation.py  test_graph_service.py  test_ingestion.py  test_rag_pipeline.py  test_retriever.py  test_text_chunker.py  test_trust_layer.py
docs/: DEMO_GUIDE.md  PROJECT_SUMMARY_FOR_RECRUITERS.md  api_usage.md  architecture.md  demo_walkthrough.md  evaluation_framework.md  ingestion_guide.md  responsible_ai.md
examples/: sample_api_payloads.json  sample_queries.md
frontend/: README.md
private_project_evidence/: CODEBASE_EVIDENCE_MAP.md  ONE_PAGE_EXECUTIVE_SUMMARY.md  PROPOSED_RESEARCH_DIRECTION.md  TECHNICAL_IMPACT_MEMO.md
sample_data/: README.md  sample_policy.txt
scripts/: benchmark.py  evaluate.py  ingest_sample.py  smoke_test.py
src/: citation_utils.py  config.py  document_loader.py  embeddings.py  graph_bridge.py  graph_rag.py  logger.py  map_reduce_rag.py  rag_chain.py  retriever.py  text_splitter.py  vector_store.py
tests/: test_smoke.py
