[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policymind-ai"
version = "0.1.0"
description = "GraphRAG-powered policy document intelligence platform"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["graphrag", "policy", "rag", "nlp", "knowledge-graph", "civic-tech", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: General",
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "anthropic>=0.28.0",
  "openai>=1.30.0",
  "sentence-transformers>=3.0.0",
  "chromadb>=0.5.0",
  "networkx>=3.3",
  "pdfplumber>=0.11.0",
  "PyPDF2>=3.0.0",
  "spacy>=3.7.0",
  "python-dotenv>=1.0.0",
  "structlog>=24.1.0",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.20.0"]
dev   = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "types-networkx",
]

[project.urls]
Homepage   = "https://github.com/nazishatta/PolicyMind-AI-RAG-Powered-Document-Intelligence-Platform"
Issues     = "https://github.com/nazishatta/PolicyMind-AI-RAG-Powered-Document-Intelligence-Platform/issues"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths    = ["backend/tests"]
pythonpath   = ["backend"]
asyncio_mode = "auto"
addopts      = "--tb=short -q --import-mode=importlib"
filterwarnings = [
  # StarletteDeprecationWarning inherits from UserWarning (not DeprecationWarning).
  # The filter in conftest.py handles the import-time case; this catches any
  # re-raises that occur during test execution after pytest's own filters are live.
  "ignore:Using.*starlette.*deprecated:UserWarning",
]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["backend/app"]
omit   = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing  = true
skip_covered  = false
# Fail the CI coverage step if overall coverage drops below this threshold.
# Raise it gradually as the suite grows.
fail_under    = 60

[tool.coverage.xml]
output = "coverage.xml"
