[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policymind-ai"
version = "0.1.0"
description = "RAG-powered policy document intelligence platform (Streamlit)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["rag", "policy", "nlp", "streamlit", "chromadb", "langchain"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: General",
]
dependencies = [
  "streamlit>=1.35.0",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-text-splitters>=0.2.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  "spacy>=3.7.0",
  "networkx>=3.3",
  "openai>=1.30.0",
  "python-dotenv>=1.0.0",
  "pypdf>=4.0.0",
  "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/nazishatta/PolicyMind-AI-RAG-Powered-Document-Intelligence-Platform"
Issues   = "https://github.com/nazishatta/PolicyMind-AI-RAG-Powered-Document-Intelligence-Platform/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
pythonpath   = ["."]
addopts      = "--tb=short -q --import-mode=importlib"

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit   = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under   = 0

[tool.coverage.xml]
output = "coverage.xml"
